# fkactor

./: Cargo.toml
fkactor/: Cargo.toml
fkactor-change/: Cargo.toml
fkactor-change/src/: change.rs  lib.rs
fkactor-derive/: Cargo.toml
fkactor-derive/src/: attr.rs
fkactor/src/: executor.rs  lens.rs  lib.rs  system.rs
fkactor/src/actors/: builder.rs  change.rs  handler.rs  mod.rs  process.rs  stream_builder.rs
fkactor/src/actors/aid/: aid.rs  internal.rs  mod.rs  typed.rs  untyped.rs
lens/: Cargo.toml
lens-derive/: Cargo.toml
lens-derive/src/: lens.rs  lib.rs
lens/src/: lib.rs
src/: lib.rs  system.rs
src/actors/: change.rs  fanout.rs  handler.rs  mapped.rs  process.rs
src/actors/aid/: internal.rs  typed.rs
