[package]
name = "fkactor"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Raph Levien <raph.levien@gmail.com>", "Robert Simmons Jr. MSc.", "Khionu Sybiern <dev@khionu.net>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/griff/fkactor"



[dependencies]
fkactor-derive = { version = "0.1.0", path = "../fkactor-derive" }

async-trait = "^0.1.30"
#bytes = "0.5"
#dashmap = "^1.2.1"
#env_logger = "^0.7.1"
#failure = "*"
futures = "^0.3.1"
#iovec = "0.1"
#itoa = "0.4.1"
#hex = "*"
#hyper = "*"
#log = "0.4"
#time = "0.1"
#net2 = "0.2.32"
#pharos = "~0.4.2"
#plist = "~0.5.3"
#rand = "^0.7"
serde = { version = "~1.0.92", features = ["derive", "rc"] }
#serde_json = "~1.0.39"
thiserror = "1.0"
tokio = { version = "^1.2.0", default-features = false, features = ["full"] }
#tokio-util = { version = "~0.2.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
#want = "0.3"
#warp = "~0.2.1"

